# backend/src/main/java/by/gusto/catalog/dto/CatalogProductResponse.java
@@ -6,6 +6,8 @@ import lombok.Data;
 import lombok.NoArgsConstructor;
 
 import java.math.BigDecimal;
+import java.util.ArrayList;
+import java.util.List;
 import java.util.UUID;
 
 @Data
@@ -22,4 +24,7 @@ public class CatalogProductResponse {
     private String unit;
     private String description;
     private BigDecimal retailPrice;
+
+    @Builder.Default
+    private List<String> imageUrls = new ArrayList<>();
 }
