# backend/src/main/java/by/gusto/file/entity/ProductImage.java
@@ -1,0 +1,39 @@
+package by.gusto.file.entity;
+
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+import jakarta.persistence.Table;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+import org.hibernate.annotations.UuidGenerator;
+
+import java.util.UUID;
+
+@Entity
+@Table(name = "product_images")
+@Data
+@NoArgsConstructor
+@AllArgsConstructor
+@Builder
+public class ProductImage {
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.UUID)
+    @UuidGenerator
+    private UUID id;
+
+    @Column(name = "product_id", nullable = false)
+    private UUID productId;
+
+    @Column(name = "file_id", nullable = false)
+    private UUID fileId;
+
+    @Column(nullable = false)
+    @Builder.Default
+    private Integer sort = 0;
+}
